<resources>
    <string name="app_name" translatable="false">LapTracker</string>
    <string name="action_tracks">Tracks</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="intro_fragment_label">Loading...</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Tracks</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="next">Next</string>
    <string name="settings">Settings</string>
    <string name="previous">Previous</string>
    <string name="loading">Loading...</string>
    <string name="btn_start">Start</string>


    <string name="coarse_title">Permissions</string>
    <string name="coarse_message">The app requires precise location</string>

    <string name="no_permission_title">Permissions</string>
    <string name="no_permission_message">Location permissions denied</string>
    <string name="language">Language - English</string>
    <string name="language_english">English</string>
    <string name="language_croatian">Croatian</string>
    <string name="language_pref">Language preferences</string>
    <string name="btn_delete_all">Clear database</string>
    <string name="wait_for_start">Waiting for start</string>
    <string name="txt_no_track_selected">No track selected</string>
    <string name="btn_new_track">New Track</string>
    <string name="txt_recording_track">Recording track...</string>
    <string name="btn_save_track">Save</string>
    <string name="txt_saving_track">Saving track</string>
    <string name="btn_cancel">Cancel</string>
    <string name="new_record">Record:</string>
    <string name="finish">Finish:</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_select">Select</string>


    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <!-- TODO: Remove or change this placeholder text -->
</resources>