<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/introFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="hr.vub.laptracker.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />
    </fragment>


    <fragment
        android:id="@+id/SecondFragment"
        android:name="hr.vub.laptracker.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:launchSingleTop="false" />
    </fragment>


    <fragment
        android:id="@+id/SettingsFragment"
        android:name="hr.vub.laptracker.SettingsFragment"

        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_SettingsFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:launchSingleTop="false" />
    </fragment>
    <fragment
        android:id="@+id/introFragment"
        android:name="hr.vub.laptracker.IntroFragment"
        android:label="@string/intro_fragment_label"
        tools:layout="@layout/fragment_intro">
        <action
            android:id="@+id/action_introFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:launchSingleTop="false"
            app:popUpTo="@id/FirstFragment"
            app:popUpToInclusive="false" />
    </fragment>

</navigation>